[ticket/15212] Fix code box double horizontal scrollbars
The code box has two overflow properties set,
one on the code element and one on the parent div container,
causing double horizontal scrollbars.

PHPBB3-15212

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -501,7 +501,7 @@ blockquote cite > div {
 	text-transform: uppercase;
 	border-bottom: 1px solid transparent;
 	margin-bottom: 0;
-	padding: 3px 3px 0 3px;
+	padding: 3px;
 	font-size: 0.8em !important;
 	font-weight: bold;
 	display: block;
